applications/integration/networking/access/tcp/mongo/mongo-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mongo-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: tcp
      number: 200
      protocol: TCP
    hosts:
    - '*'
