applications/integration/networking/access/tcp/mongo/mongo-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mongo-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - mongo-gateway
  http:
  - match:
    - port: 27017
    route:
    - destination:
        host: mongo-service.storage.svc.cluster.local
        port:
          number: 27017
